@@ -68,17 +68,34 @@ params2ecdf.default <- function(params,
           
  # number of parameters
  nparam <- NCOL(params)
-    
- if (nparam==1) params <- matrix(params, ncol=1)
+
+ # Number of parameter sets
+ n <- NROW(params) 
     
  # Checking 'param.names'
  if (length(param.names) != nparam)
    stop("Invalid argument: 'length(param.names) = ", length(param.names), " != ", nparam, " = nparam'")
+
+ # Checking 'beh.thr'
+ if ( !is.na(beh.thr) ) {
+   if ( is.null(MinMax) )
+     stop("Missing argument: 'MinMax' has to be provided before using 'beh.thr' !!")        
+   if ( missing(gofs) ) {
+     stop("Missing argument: 'gofs' has to be provided before using 'beh.thr' !!")
+   } else if (length(gofs) != n)
+       stop("Invalid argument: 'length(gofs) != nrow(params)' (", length(gofs), "!=", n, ") !!" ) 
+ } # IF end
+         
+ # Checking 'MinMax'
+ if ( !is.null(MinMax) ) {
+   if ( !(MinMax %in% c("min", "max")) )
+     stop("Invalid argument: 'MinMax' must be in c('min', 'max')")
+ } # IF end
       
  # checking that the user provided 1 weight for each behavioural parameter set
  if ( !is.null(weights) ) {
-   if (length(weights) != NROW(params) )
-     stop("Invalid argument: 'length(w) != nrow(params)' (", length(weights), "!=", nrow(params), ")" )
+   if (length(weights) != n )
+     stop("Invalid argument: 'length(w) != nrow(params)' (", length(weights), "!=", n, ")" )
  } # IF end
     
  # creating the final output, a list with the ECDFs 
@@ -87,6 +104,28 @@ params2ecdf.default <- function(params,
  # Checking 'do.png' and 'plot'
  if (do.png==TRUE & plot==FALSE)
    stop("Invalid argument: 'plot=FALSE' & 'do.png=TRUE' is not possible !!")
+
+ if (nparam==1) params <- matrix(params, ncol=1)
+
+ # Filtering out those parameter sets above/below a certain threshold
+ if (!is.na(beh.thr)) {  
+   # Checking 'beh.thr'
+   mx <- max(gofs, na.rm=TRUE)
+   if (beh.thr > mx)
+     stop("Invalid argument: 'beh.thr' must be lower than ", mx ,"!!")
+    
+   # Computing the row index of the behavioural parameter sets
+   ifelse(MinMax=="min", beh.row.index <- which(gofs <= beh.thr), 
+                         beh.row.index <- which(gofs >= beh.thr) )
+    
+   # Removing non-behavioural parameter sets & gofs
+   params <- params[beh.row.index, ]
+   gofs   <- gofs[beh.row.index]
+   
+   # Amount of behavioural parameter sets 
+   nbeh <- nrow(params)
+   if (verbose) message( "[ Number of behavioural parameter sets: ", nbeh, " ]" )
+ } # IF end
     
  ########################     Plotting Preliminars   ########################
  # If there are too many parameters to plot,more than 1 plot is produced
